--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>AiDex Sharp 快速开发平台-登录页面</title>
+	<title>登录页面</title>
 	<link rel="stylesheet" type="text/css" href="css/style_login.css">
 	<link rel="icon" href="img/favicon_login.ico">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
